[package]
name = "pervis"
version = "0.0.1"
authors = [""]
categories = [ ]
description = ""
keywords = [ ]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
bbqueue = "0.4"
bno055 = { git = "https://github.com/eupn/bno055.git" }
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtfm = "0.5"
embedded-hal = "0.2"
log = "0.4"
mint = "0.5"
nrf52840-hal = "0.10"
nrf52840-pac = "0.9"
panic-itm = "0.4"
