[package]
name = "pervis"
version = "0.0.1"
authors = [""]
categories = [ ]
description = ""
keywords = [ ]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
bbqueue = "0.4"
bno055 = "0.3"
cortex-m = "0.7"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5"
embedded-hal = "0.2"
log = "0.4"
nrf52840-hal = "0.12"
nrf52840-pac = "0.9"
panic-itm = "0.4"
