[package]
name = "mandala"
version = "0.0.1"
authors = [""]
categories = [ ]
description = ""
keywords = [ ]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
bno055 = "0.3"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.0"
embedded-hal = "0.2"
glam = { version = "0.20", default-features = false, features = ["libm", "mint"] }
log = "0.4"
nrf52840-hal = "0.14"
nrf52840-pac = "0.10"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
rand_core = { version = "0.5", default-features = false }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
