[package]
authors = ["Kenneth Koski <kennethkoski@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "povdagger"
version = "0.1.0"

[dependencies]
apa102-spi = "0.3"
cortex-m = "0.6"
embedded-hal = "0.2"
feather_m0 = "0.5"
panic-halt = "0.2"
rand = { version = "0.7", default-features = false }
rand_chacha = { version = "0.2", default-features = false }
tinybmp = "0.1"

[[bin]]
name = "povdagger"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
