[package]
authors = ["Kenneth Koski <kennethkoski@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "povdagger"
version = "0.1.0"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
embedded-hal = { version = "0.2", features = ["unproven"] }
feather_m4 = { git = "https://github.com/atsamd-rs/atsamd/", features = ["unproven"] }
panic-halt = "0.2"
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"
tinybmp = "0.1"
bno055 = "0.3"
mint = "0.5"

[[bin]]
name = "povdagger"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
