[package]
authors = ["Kenneth Koski <kennethkoski@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "goggles"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2"
f3 = "0.6"
nb = "0.1"
panic-semihosting = "0.5"
smart-leds = {git = "https://github.com/smart-leds-rs/smart-leds"}
ws2812-spi = {git = "https://github.com/smart-leds-rs/ws2812-spi-rs"}

[[bin]]
name = "pov"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
